--- a/app/src/main/res/layout/flight_list_item.xml
+++ b/app/src/main/res/layout/flight_list_item.xml
@@ -19,11 +19,25 @@
             android:textSize="18sp"
             android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/duartion"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Duartion : "/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Duartion : "/>
+
+            <TextView
+                android:id="@+id/duartion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
