--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@drawable/blue_transparent_bg"
     >
 
 
@@ -14,7 +14,7 @@
         android:layout_width="120dp"
         android:layout_height="150dp"
         android:layout_marginTop="40dp"
-
+        android:src="@drawable/rapid_logo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -39,6 +39,13 @@
                 android:layout_height="45dp"
                 android:src="@drawable/check_circle"/>
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Login Using Fingerprint"
+            android:gravity="center"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -97,7 +104,7 @@
         android:inputType="textPassword"
         android:padding="5dp"
         android:layout_marginBottom="130dp"
-        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignBottom="@+id/footer"
         android:layout_alignLeft="@+id/username"
         android:layout_alignStart="@+id/username" />
 
@@ -105,7 +112,7 @@
         android:id="@+id/signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView2"
+        android:layout_above="@+id/footer"
         android:textSize="18sp"
         android:text="Sign In"
         android:padding="10dp"
@@ -141,23 +148,57 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>-->
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register Here."
         android:textColor="#fff"
-        android:layout_above="@+id/linearLayout"
+        android:layout_above="@+id/footer"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="6dp" />
+        android:layout_marginBottom="6dp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:id="@+id/linearLayout">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/footer"
+        android:padding="5dp">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1.3"
+            android:visibility="gone"
+            android:src="@drawable/rapid_logo"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.7">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Version 1.1"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:gravity="end"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Powered By TSI @All rights reserved"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:gravity="end"/>
+
+
+        </LinearLayout>
 
 
 
